k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: covid-service
  labels:
    app: covid
spec:
  selector:
    app: covid
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
