k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: covid-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mlops-covid.strivly.co
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: covid-service
                port:
                  number: 80
